- fix footer overflow and position

--- a/xmlparser/baseview/static/baseview/css/custom.css
+++ b/xmlparser/baseview/static/baseview/css/custom.css
@@ -1,12 +1,3 @@
-body,html {
-    height: 100vh;
-    margin: 0;
-    padding: 0;
-    overflow: none;
-}
-body {
-    /*background-image: url(../images/mountains.svg); */
-}
 .text-sm {
     font-size: 0.85rem;
 }
@@ -37,7 +28,7 @@ box-shadow: 5px 10px 5px 0px rgba(169,169,169,1);
     font-size: 3rem !important;
 }
 .footer {
-  overflow: hidden;
+  /*overflow-x: hidden;*/
 }
 .footer .dev-ul {
     list-style-type: circle;
